--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,28 +6,28 @@ michael:
   password_digest: <%= User.digest('password') %>
   admin: true
   activated: true
-  activated_at: <%= Time.zone.now %>
+  activated_at: <%= Time.now %>
 
 archer:
   name: Sterling Archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
   activated: true
-  activated_at: <%= Time.zone.now %>
+  activated_at: <%= Time.now %>
 
 lana:
   name: Lana Kane
   email: hands@example.gov
   password_digest: <%= User.digest('password') %>
   activated: true
-  activated_at: <%= Time.zone.now %>
+  activated_at: <%= Time.now %>
 
 malory:
   name: Malory Archer
   email: boss@example.gov
   password_digest: <%= User.digest('password') %>
   activated: true
-  activated_at: <%= Time.zone.now %>
+  activated_at: <%= Time.now %>
 
 <% 30.times do |n| %>
 user_<%= n %>:
@@ -35,5 +35,5 @@ user_<%= n %>:
   email: <%= "User-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
   activated: true
-  activated_at: <%= Time.zone.now %>
+  activated_at: <%= Time.now %>
 <% end %>
